feature: command line tool